<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TemplateSinglePhoto">

    <RelativeLayout
        android:id="@+id/frame_template"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintDimensionRatio="H, 3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/temp_single_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/palm_tree" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30dp"
            tools:text="Pozdrowienia"
            android:textAlignment="center"/>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_template"
        app:layout_constraintBottom_toTopOf="@id/template_buttons"
        android:foregroundGravity="center_vertical"
        android:maxHeight="100dp">


    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/template_buttons"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:layout_marginBottom="15dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_buttons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_buttons"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <ImageButton
                android:id="@+id/border_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/set_border"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_item_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/add_item_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                android:src="@drawable/plam_tree_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_text_button"
                app:layout_constraintStart_toEndOf="@id/border_button"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                android:id="@+id/add_text_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                android:src="@drawable/set_text"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_item_button"
                app:layout_constraintTop_toTopOf="parent"/>



        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/top_buttons"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/clear"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/size_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



            <Button
                android:id="@+id/size_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/template_button_size_textsize"
                android:text="@string/template_button_size_text"
                android:drawableTop="@drawable/set_size"
                android:drawablePadding="-8dp"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/clear_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/merge_button"
                android:stateListAnimator="@null"
                android:elevation="@dimen/button_elevation"/>



            <ImageButton
                android:id="@+id/merge_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/share_button"
                app:layout_constraintStart_toEndOf="@+id/size_button"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/download"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/merge_button"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/share"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/colorAccent"
                android:elevation="@dimen/button_elevation"/>


        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>