<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.fragment.BorderSettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/border_value_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/border_color_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/decrement_border_value"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:padding="0dp"
                android:textSize="@dimen/border_setting_value_text_size"
                android:text="—"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/border_size_value"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@color/colorWhiteTransparent"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="28dp"
                tools:text="10" />

            <Button
                android:id="@+id/increment_border_value"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:padding="0dp"
                android:text="+"
                android:textColor="@android:color/black"
                android:textSize="@dimen/border_setting_value_text_size" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/border_color_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/color_palette"
            android:layout_marginLeft="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:elevation="@dimen/button_elevation"
            android:stateListAnimator="@null"/>



    </LinearLayout>

</FrameLayout>