...
            app:layout_constraintBottom_toBottomOf="@+id/seekBarTextScaleValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekBarTextScaleValue"
            app:layout_constraintTop_toTopOf="@+id/seekBarTextScaleValue" />

        <Spinner
            android:id="@+id/fontListSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTextScaleValue" />

        <ImageButton
            android:id="@+id/changeColorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/button_elevation"
            android:src="@drawable/color_palette"
            app:layout_constraintBottom_toBottomOf="parent"
...
